--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
             <div class="container">
                 <div class="cont1">
-                    <div class="middleLine"></div>
+                    <!-- <div class="middleLine"></div> -->
                     <div class="web_wrap">
                         <h2>웹 리디자인</h2>
                         <div class="cont_wrap">
@@ -32,7 +32,7 @@
                                 <h3>시드물 Web</h3>
                                 <div class="computer">
                                     <img src="images/computer.png" alt="시드물결과">
-                                    <div class="result"><a href="#">시드물결과</a></div>
+                                    <div class="result"><a href="#">결과보기</a></div>
                                 </div>
                                 <dl>
                                     <dt>제작물</dt>
@@ -41,18 +41,20 @@
                                     <dd>3일 소요( 28시간)</dd>
                                     <dt>사용툴</dt>
                                     <dd>
-                                        <img src="images/0_pigma.png" alt="피그마">
-                                        <img src="images/0_photoshop.png" alt="포토샵">
-                                        <img src="images/0_html.png" alt="html">
-                                        <img src="images/0_css.png" alt="css">
+                                        <div>
+                                            <img src="images/0_pigma.png" alt="피그마">
+                                            <img src="images/0_photoshop.png" alt="포토샵">
+                                            <img src="images/0_html.png" alt="html">
+                                            <img src="images/0_css.png" alt="css">
+                                        </div>
                                     </dd>
                                 </dl>
                             </div><!-- sidmool -->
                             <div class="tiffani">
-                                <h3>시드물 Web</h3>
+                                <h3>티파니엔코 Web</h3>
                                 <div class="computer">
-                                    <img src="images/computer.png" alt="시드물결과">
-                                    <div class="result"><a href="#">시드물결과</a></div>
+                                    <img src="images/computer.png" alt="티파니엔코결과">
+                                    <div class="result"><a href="#">결과보기</a></div>
                                 </div>
                                 <dl>
                                     <dt>제작물</dt>
@@ -61,10 +63,12 @@
                                     <dd>3일 소요( 28시간)</dd>
                                     <dt>사용툴</dt>
                                     <dd>
-                                        <img src="images/0_pigma.png" alt="피그마">
-                                        <img src="images/0_photoshop.png" alt="포토샵">
-                                        <img src="images/0_html.png" alt="html">
-                                        <img src="images/0_css.png" alt="css">
+                                        <div>
+                                            <img src="images/0_pigma.png" alt="피그마">
+                                            <img src="images/0_photoshop.png" alt="포토샵">
+                                            <img src="images/0_html.png" alt="html">
+                                            <img src="images/0_css.png" alt="css">
+                                        </div>
                                     </dd>
                                 </dl>
                             </div><!-- tiffani -->
@@ -72,9 +76,22 @@
                     </div><!-- 웹 리디자인 -->
                 </div>
                 <div class="cont2">
-                    <div class="disign_wrap">
-                        <div class="editDesign"></div>
-                        <div class="appDesign"></div>
+                    <div class="design_wrap">
+                        <div class="editDesign">
+                            <h2>편집디자인 작업물</h2>
+                            <div class="imgLwrap">
+                                <img src="images/left_img.png" alt="편집디자인 작업물">
+                                <div class="more"><a href="#">작업물 더보기+</a></div>
+                            </div>
+                            
+                        </div>
+                        <div class="appDesign">
+                            <h2>어플리케이션 디자인</h2>
+                            <div class="imgRwrap">
+                                <img src="images/app_design.png" alt="어플리케이션 디자인">
+                            </div>
+                            <div class="more"><a href="#">어플 소개 더보기+</a></div>
+                        </div>
                     </div><!-- 편집디자인 앱 -->
                 </div>
                 <div class="cont3">
