--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <h3>시드물 Web</h3>
                                 <div class="computer">
                                     <img src="images/computer.png" alt="시드물결과">
-                                    <div class="result"><a href="#">결과보기</a></div>
+                                    <div class="result"><a href="https://sidmoonyoona.netlify.app">결과보기</a></div>
                                 </div>
                                 <dl>
                                     <dt>제작물</dt>
@@ -90,32 +90,81 @@
                             <div class="imgRwrap">
                                 <img src="images/app_design.png" alt="어플리케이션 디자인">
                             </div>
-                            <div class="more"><a href="#">어플 소개 더보기+</a></div>
+                            <div class="more"><a href="app.html">어플 소개 더보기+</a></div>
                         </div>
                     </div><!-- 편집디자인 앱 -->
                 </div>
                 <div class="cont3">
-                    <div class="sns_design_1"></div>
-                    <div class="sns_design_2"></div>
+                    <h2>SNS 디자인 작업물</h2>
+                    <div class="swiper sns_design_1">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="images/sns_banner_1.png" alt="sns배너"></div>
+                            <div class="swiper-slide"><img src="images/sns_banner_2.png" alt="sns배너"></div>
+                            <div class="swiper-slide"><img src="images/sns_banner_3.png" alt="sns배너"></div>
+                            <div class="swiper-slide"><img src="images/sns_banner_4.png" alt="sns배너"></div>
+                            <div class="swiper-slide"><img src="images/sns_banner_5.png" alt="sns배너"></div>
+                        </div>
+                    </div>
+                    <div class="swiper sns_design_2">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="images/sns_01.png" alt="sns가로배너"></div>
+                            <div class="swiper-slide"><img src="images/sns_02.png" alt="sns가로배너"></div>
+                            <div class="swiper-slide"><img src="images/sns_03.png" alt="sns가로배너"></div>
+                            <div class="swiper-slide"><img src="images/sns_04.png" alt="sns가로배너"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="cont4">
+                    <h2>상세페이지 디자인 작업물</h2>
                     <div class="detailedPage">
                         <div class="d1">
-                            <a href="#"><img src="#" alt=""></a>
-                            <a href="#">결과보기</a>
+                            <div class="d_box">
+                                <a href="https://www.figma.com/proto/7qTmMJnQnsrK1guiLdiATy/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4-%EC%9E%91%EC%97%85?page-id=0%3A1&node-id=382-1412&node-type=FRAME&viewport=320%2C-1820%2C0.09&t=QuYFgKaCElmYW1uD-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2" target="_blank"><img src="images/detailed_sidmool.png" alt="상세페이지"></a>
+                            </div>
+                            <div class="result"><a href="https://www.figma.com/proto/7qTmMJnQnsrK1guiLdiATy/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4-%EC%9E%91%EC%97%85?page-id=0%3A1&node-id=382-1412&node-type=FRAME&viewport=320%2C-1820%2C0.09&t=QuYFgKaCElmYW1uD-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2" target="_blank">결과보기</a></div>
                         </div>
                         <div class="d2">
-                            <a href="#"><img src="#" alt=""></a>
-                            <a href="#">결과보기</a>
+                            <div class="d_box">
+                                <a href="https://www.figma.com/proto/7qTmMJnQnsrK1guiLdiATy/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4-%EC%9E%91%EC%97%85?page-id=0%3A1&node-id=599-1076&node-type=FRAME&viewport=320%2C-596%2C0.09&t=eIsuQJthI8GDRVi4-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2" target="_blank"><img src="images/detailed_hanatour.png" alt="상세페이지"></a>
+                            </div>
+                            <div class="result"><a href="https://www.figma.com/proto/7qTmMJnQnsrK1guiLdiATy/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4-%EC%9E%91%EC%97%85?page-id=0%3A1&node-id=599-1076&node-type=FRAME&viewport=320%2C-596%2C0.09&t=eIsuQJthI8GDRVi4-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2" target="_blank">결과보기</a></div>
                         </div>
                         <div class="d3">
-                            <a href="#"><img src="#" alt=""></a>
-                            <a href="#">결과보기</a>
+                            <div class="d_box">
+                                <a href="https://www.figma.com/proto/7qTmMJnQnsrK1guiLdiATy/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4-%EC%9E%91%EC%97%85?page-id=0%3A1&node-id=543-1089&node-type=FRAME&viewport=320%2C322%2C0.09&t=yPpbWlCnpz78A0q3-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2" target="_blank"><img src="images/detalied_tiffani.png" alt="상세페이지"></a>
+                            </div>
+                            <div class="result"><a href="https://www.figma.com/proto/7qTmMJnQnsrK1guiLdiATy/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4-%EC%9E%91%EC%97%85?page-id=0%3A1&node-id=543-1089&node-type=FRAME&viewport=320%2C322%2C0.09&t=yPpbWlCnpz78A0q3-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2" target="_blank">결과보기</a></div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> 
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script>
+        const slide1 = new Swiper('.sns_design_1',{
+            slidesPerView:4,
+            spaceBetween:20,
+            autoplay:{
+                delay:1,
+                desableOnInteraction: false, 
+            },
+            loop:true,
+            speed:7e3,
+            freemode: true,
+        })
+        const slide2 = new Swiper('.sns_design_2',{
+            slidesPerView:2,
+            spaceBetween:20,
+            autoplay:{
+                delay:1,
+                desableOnInteraction: false, 
+            },
+            loop:true,
+            speed:4e3,
+            freemode: true,
+        })
+    </script>
 </body>
 </html>
