--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <h3>시드물 Web</h3>
                                 <div class="computer">
                                     <img src="images/computer.png" alt="시드물결과">
-                                    <div class="result"><a href="https://sidmoonyoona.netlify.app">결과보기</a></div>
+                                    <div class="result"><a href="https://sidmoonyoona.netlify.app" target="_blank">결과보기</a></div>
                                 </div>
                                 <dl>
                                     <dt>제작물</dt>
@@ -54,7 +54,7 @@
                                 <h3>티파니엔코 Web</h3>
                                 <div class="computer">
                                     <img src="images/computer.png" alt="티파니엔코결과">
-                                    <div class="result"><a href="#">결과보기</a></div>
+                                    <div class="result"><a href="#" target="_blank">결과보기</a></div>
                                 </div>
                                 <dl>
                                     <dt>제작물</dt>
@@ -81,7 +81,7 @@
                             <h2>편집디자인 작업물</h2>
                             <div class="imgLwrap">
                                 <img src="images/left_img.png" alt="편집디자인 작업물">
-                                <div class="more"><a href="#">작업물 더보기+</a></div>
+                                <div class="more"><a href="#" target="_blank">작업물 더보기+</a></div>
                             </div>
                             
                         </div>
@@ -90,7 +90,7 @@
                             <div class="imgRwrap">
                                 <img src="images/app_design.png" alt="어플리케이션 디자인">
                             </div>
-                            <div class="more"><a href="app.html">어플 소개 더보기+</a></div>
+                            <div class="more"><a href="app.html" target="_blank">어플 소개 더보기+</a></div>
                         </div>
                     </div><!-- 편집디자인 앱 -->
                 </div>
