--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <h3>티파니엔코 Web</h3>
                                 <div class="computer">
                                     <img src="images/computer.png" alt="티파니엔코결과">
-                                    <div class="result"><a href="#" target="_blank">결과보기</a></div>
+                                    <div class="result"><a href="#" target="_blank">작업 진행 중</a></div>
                                 </div>
                                 <dl>
                                     <dt>제작물</dt>
