--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="cont5">
+                    <div class="thank"><img src="images/thank you.png" alt="지금까지 봐주셔서 감사합니다."></div>
+                </div>
             </div>
         </section> 
     </div>
