--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <dd>3일 소요( 28시간)</dd>
                                     <dt>사용툴</dt>
                                     <dd>
-                                        <div>
+                                        <div class="icon">
                                             <img src="images/0_pigma.png" alt="피그마">
                                             <img src="images/0_photoshop.png" alt="포토샵">
                                             <img src="images/0_html.png" alt="html">
@@ -63,7 +63,7 @@
                                     <dd>3일 소요( 28시간)</dd>
                                     <dt>사용툴</dt>
                                     <dd>
-                                        <div>
+                                        <div class="icon">
                                             <img src="images/0_pigma.png" alt="피그마">
                                             <img src="images/0_photoshop.png" alt="포토샵">
                                             <img src="images/0_html.png" alt="html">
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="cont5">
-                    <div class="thank"><img src="images/thank you.png" alt="지금까지 봐주셔서 감사합니다."></div>
+                    <div class="thankyou"><img src="images/thank you.png" alt="지금까지 봐주셔서 감사합니다."></div>
                 </div>
             </div>
         </section> 
