--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                             <div class="sidmool">
                                 <h3>시드물 Web</h3>
                                 <div class="computer">
-                                    <img src="images/computer.png" alt="시드물결과">
+                                    <img src="images/com_img1.png" alt="시드물결과">
                                     <div class="result"><a href="https://sidmoonyoona.netlify.app" target="_blank">결과보기</a></div>
                                 </div>
                                 <dl>
                                     <dt>제작물</dt>
                                     <dd>Main / Sub*2(상품목록, 상세페이지)</dd>
                                     <dt>제작기간</dt>
-                                    <dd>3일 소요( 28시간)</dd>
+                                    <dd>[24년8월]3일 소요( 28시간)</dd>
                                     <dt>사용툴</dt>
                                     <dd>
                                         <div class="icon">
@@ -53,7 +53,7 @@
                             <div class="tiffani">
                                 <h3>티파니엔코 Web</h3>
                                 <div class="computer">
-                                    <img src="images/computer.png" alt="티파니엔코결과">
+                                    <img src="images/com_img2.png" alt="티파니엔코결과">
                                     <div class="result"><a href="#" target="_blank">작업 진행 중</a></div>
                                 </div>
                                 <dl>
@@ -80,8 +80,8 @@
                         <div class="editDesign">
                             <h2>편집디자인 작업물</h2>
                             <div class="imgLwrap">
-                                <img src="images/left_img.png" alt="편집디자인 작업물">
-                                <div class="more"><a href="#" target="_blank">작업물 더보기+</a></div>
+                                <img src="images/left_img.jpg" alt="편집디자인 작업물">
+                                <div class="more"><a href="editdesign.html" target="_blank">작업물 더보기+</a></div>
                             </div>
                             
                         </div>
