--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                             <div class="swiper-slide"><img src="images/sns_banner_3.png" alt="sns배너"></div>
                             <div class="swiper-slide"><img src="images/sns_banner_4.png" alt="sns배너"></div>
                             <div class="swiper-slide"><img src="images/sns_banner_5.png" alt="sns배너"></div>
+                            <div class="swiper-slide"><img src="images/sns_banner_6.png" alt="sns배너"></div>
                         </div>
                     </div>
                     <div class="swiper sns_design_2">
